--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+Unit 1: Linear Classifiers and Generalizations/Project 1: Automatic Review Analyzer/sentiment_analysis/.idea/
