--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,7 @@ Unit_2-_Nonlinear_Classification,_Linear_Regression,_Collaborative_Filtering/Pro
 Unit_3-_Neural_Networks/Project_3-_Digit_Recognition_Part_2/mnist/part2_mnist/.idea/
 
 Unit_3-_Neural_Networks/Project_3-_Digit_Recognition_Part_2/mnist/part2_twodigit/.idea/
+
+Unit_4-_Unsupervised_Learning/Homework_5/.idea/
+
+Unit_4-_Unsupervised_Learning/Project_4-_Collaborative_Filtering_via_Gaussian_Processes/netflix/.idea/
