Project 5 instructor's solutions pdf's.

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,5 @@ Unit_3-_Neural_Networks/Project_3-_Digit_Recognition_Part_2/mnist/part2_twodigit
 Unit_4-_Unsupervised_Learning/Homework_5/.idea/
 
 Unit_4-_Unsupervised_Learning/Project_4-_Collaborative_Filtering_via_Gaussian_Processes/netflix/.idea/
+
+Unit_5-_Reinforcement_Learning/Project_5-_Text-Based_Game/rl/.idea/
